force-app/main/default/objects/ConsumptionRate/fields/FIN_Pricing_Method__c.field-meta.xml
<CustomField>
    <fullName>FIN_Pricing_Method__c</fullName>
    <label>Pricing Method*</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unit Price</fullName>
            </value>
            <value>
                <fullName>Flat Rate (%)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>