force-app/main/default/objects/ConsumptionRate/fields/FIN_Rate__c.field-meta.xml
<CustomField>
    <fullName>FIN_Rate__c</fullName>
    <label>Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>