force-app/main/default/objects/ConsumptionRate/recordTypes/Master.recordType-meta.xml
<RecordType>
    <fullName>Master</fullName>
    <active>true</active>
    <label>FIN Consumption Rate</label>
</RecordType>